--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/speedy_claims
+spring.datasource.username=root
+spring.datasource.password=c0nygre
+spring.datsource.driver.class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+logging.level.org.hibernate=INFO
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#server.port=8765
